// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TypeScript — fullCheck > handles multiple files > full-check-multi-file 1`] = `
"✅ prettier: 3 file(s) formatted correctly
  ✅ lsp: 0 diagnostics
  ⚠ tsc: 3 error(s), 0 warning(s)
    ✗ fixtures/broken.ts:2:7: Type 'number' is not assignable to type 'string'. (TS2322)
    ✗ fixtures/broken.ts:5:3: Type 'string' is not assignable to type 'number'. (TS2322)
    ✗ fixtures/broken.ts:8:34: Object literal may only specify known properties, and 'age' does not exist in type '{ name: string; }'. (TS2353)"
`;

exports[`TypeScript — fullCheck > runs full check on broken files > full-check-broken 1`] = `
"✅ prettier: 1 file(s) formatted correctly
  ✅ lsp: 0 diagnostics
  ⚠ tsc: 3 error(s), 0 warning(s)
    ✗ fixtures/broken.ts:2:7: Type 'number' is not assignable to type 'string'. (TS2322)
    ✗ fixtures/broken.ts:5:3: Type 'string' is not assignable to type 'number'. (TS2322)
    ✗ fixtures/broken.ts:8:34: Object literal may only specify known properties, and 'age' does not exist in type '{ name: string; }'. (TS2353)"
`;

exports[`TypeScript — fullCheck > runs full check on valid files > full-check-valid 1`] = `
"✅ prettier: 1 file(s) formatted correctly
  ✅ lsp: 0 diagnostics
  ✅ tsc: 0 errors"
`;
